--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 
 			<!--episode I-->
 			<div class="contentsContainer">	
-				<div class="contents" id="ep1">
+				<div class="contents" id="ep1" data-passcode="Jedi">
 					<h2>Episode I: The Phantom Menace</h2>
+					<img src="images/ep1.jpg" class="moviePoster"/>
 					<h3>Plot</h3>
 					<p class="plot">Two Jedi Knights escape a hostile blockade to find allies and come across a young boy, Anakin Skywalker. A prophecy suggests Anakin may bring balance to the Force, but the long-dormant Sith resurface to reclaim their old glory.</p>
 
@@ -37,46 +38,50 @@
 				</div>
 
 				<!--episode II-->
-				<div class="contents" id="ep2">
+				<div class="contents" id="ep2" data-passcode="Tatooine">
 					<h2>Episode II: Attack of the Clones</h2>
+					<img src="images/ep2.jpg" class="moviePoster"/>
 					<h3>Plot</h3>
 					<p class="plot">Ten years after their first meeting, Anakin Skywalker shares a forbidden romance with Padme, while Obi-Wan investigates an assassination attempt on the Senator and discovers a secret clone army crafted for the Jedi.</p>
 
 					<div class="ending">
 					<h3>Ending</h3>
-					<p>Politics and complicated stuff.</p>
+					<p>Politics and complicated stuff. This movie is the nadir of the franchise.</p>
 					</div>
 				</div>
 
 				<!--episode III-->
-				<div class="contents" id="ep3">
+				<div class="contents" id="ep3" data-passcode="Stormtrooper">
 					<h2>Episode III: Revenge of the Sith</h2>
+					<img src="images/ep3.jpg" class="moviePoster"/>
 					<h3>Plot</h3>
 					<p class="plot">After three years of fighting in the Clone Wars, Anakin Skywalker falls prey to the Sith Lord's lies and makes an enemy of the Jedi and those he loves, concluding his journey to the Dark Side.</p>
 
 					<div class="ending">
 					<h3>Ending</h3>
-					<p>Anakin becomes Darth Vader!</p>
+					<p>Anakin cosplays as Darth Vader!</p>
 					</div>
 				</div>
 
 				<!--episode IV-->
-				<div class="contents" id="ep4">
+				<div class="contents" id="ep4" data-passcode="The Force">
 					<h2>Episode IV: A New Hope</h2>
+					<img src="images/ep4.jpg" class="moviePoster"/>
 					<h3>Plot</h3>
 					<p class="plot">The secret to ending the domination of the Galactic Empire is carried by two droids, sent on a mission to find the last Jedi. They find a rustic farmboy, Luke Skywalker, who dreams of leaving his monotonous life for adventure.</p>
 					
 					<div class="ending">
 					<h3>Ending</h3>
-					<p>Luke Skywalker allies with an elderly hermit, a selfish smuggler and his walking rug, and the princess of a dead planet. Their journey leads them to the rebel alliance, where their bravery and sacrifice allows them to throw off the yoke of the empire....AT LEAST FOR NOW!</p>
+					<p>Luke Skywalker joins a cocky smuggler, a furry pilot, and a princess and together, they defeat the Galactic Empire. (FOR NOW!)</p>
 					</div>
 				</div>
 
 				<!--episode V-->
-				<div class="contents" id="ep5">
+				<div class="contents" id="ep5" data-passcode="Yoda">
 					<h2>Episode V: The Empire Strikes Back</h2>
+					<img src="images/ep5.jpg" class="moviePoster"/>
 					<h3>Plot</h3>
-					<p class="plot">Under Darth Vadar's leadership, the Galactic Empire pursues Luke Skywalker and the rest of the Rebel Alliance. After Vader captures Luke's friends, Luke must decide whether to complete his training and become a full Jedi Knight or confront Vader to save his comrades.</p>
+					<p class="plot">Darth Vader and the Galactic Empire pursue Luke Skywalker and the rest of the Rebel Alliance. After Vader captures Luke's friends, Luke must decide whether to complete his Jedi training or confront Vader to save his comrades.</p>
 
 					<div class="ending">
 					<h3>Ending</h3>
@@ -85,22 +90,24 @@
 				</div>
 
 				<!--episode VI-->
-				<div class="contents" id="ep6">
+				<div class="contents" id="ep6" data-passcode="Wookie">
 					<h2>Episode VI: Return of the Jedi</h2>
+					<img src="images/ep6.jpg" class="moviePoster"/>
 					<h3>Plot</h3>
 					<p class="plot">After rescuing Han Solo from the palace of Jabba the Hutt, the Rebels attempt to destroy the Second Death Star, while Luke Skywalker tries to bring his father back to the Light Side of the Force.</p>
 
 					<div class="ending">
 					<h3>Ending</h3>
-					<p>Death Star explodes.</p>
+					<p>The Death Star explodes [again] and the Ewoks throw a party in their tree village!</p>
 					</div>
 				</div>
 
 				<!-- enter passcode -->
 				<div class="passcodePrompt">
 					</br>
-					<p><i>Type "Jedi" to reveal the ending of this film.</i></p>
-					<input><button class='reveal'>Reveal</button><p class="error"></p>
+					<p><i>Type <span class="printPasscode">$passcode</span> to reveal the ending of this film.</i></p>
+					<input class="passcodeInput"></input><button class='reveal'>Reveal</button><p class="error"></p>
+					</div>
 				</div>
 			</div>
 		</div>
